# Ballgame_sfml

./: .gitignore  CMakeLists.txt  Game_sfml.sln  Game_sfml.vcxproj  Game_sfml.vcxproj.filters  README.md  license.txt
installer/AnimationBall/: Animationball.iss
src/: ball.cpp  ball.hpp  main.cpp
x64/Debug/Game_sfml.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Game_sfml.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
